--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - '9620:9616'
     environment:
       - DB_CONNECTION=mysql+pymysql://root:root@mysql:3306/polkascan?charset=utf8mb4
-      - SUBSTRATE_RPC_URL=ws://substrate-node:9944
-#      - SUBSTRATE_RPC_URL=ws://host.docker.internal:9944
+      # - SUBSTRATE_RPC_URL=ws://substrate-node:9944
+      - SUBSTRATE_RPC_URL=ws://host.docker.internal:9944
       - NODE_TYPE=archive
       - SUBSTRATE_SS58_FORMAT=42
       - INSTALLED_ETL_DATABASES=polkascan_explorer
